# webfinger-rs

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _typos.toml  bacon.toml  cliff.toml  deny.toml  justfile  package-lock.json  package.json  rustfmt.toml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release-plz.yml  test.yml
scripts/: build-webfinger-service-worker.sh  build-webfinger-viewer-worker.sh
webfinger-cli/: CHANGELOG.md  Cargo.toml  README.md  webfinger.tape
webfinger-cli/src/: main.rs
webfinger-rs/: CHANGELOG.md  Cargo.toml
webfinger-rs/examples/: actix.rs  axum.rs  client.rs
webfinger-rs/src/: actix.rs  axum.rs  error.rs  http.rs  lib.rs  query.rs  rel.rs  reqwest.rs  types.rs
webfinger-rs/src/types/: jrd_uri.rs  link.rs  rel.rs  request.rs  resource.rs  response.rs
webfinger-rs/tests/: reqwest_axum.rs
webfinger-service/: CHANGELOG.md  Cargo.toml  README.md  webfinger.example.toml
webfinger-service-axum/: CHANGELOG.md  Cargo.toml  README.md
webfinger-service-axum/src/: lib.rs  main.rs
webfinger-service-worker/: CHANGELOG.md  Cargo.toml  README.md
webfinger-service-worker/src/: kv.rs  lib.rs  observability.rs
webfinger-service/src/: config.rs  lib.rs  provider.rs  tests.rs
webfinger-viewer/: CHANGELOG.md  Cargo.toml  README.md  viewer.example.toml  viewer.toml
webfinger-viewer-axum/: CHANGELOG.md  Cargo.toml  README.md
webfinger-viewer-axum/src/: axum.rs  main.rs
webfinger-viewer-worker/: CHANGELOG.md  Cargo.toml  README.md
webfinger-viewer-worker/assets/: app.css  app.js
webfinger-viewer-worker/src/: lib.rs  lookup.rs  observability.rs  server.rs  view.rs
webfinger-viewer-worker/src/lookup/: policy.rs  request.rs  result.rs
webfinger-viewer-worker/src/view/: meta.rs  state.rs
webfinger-viewer-worker/templates/: lookup_error.html  page.html
webfinger-viewer/src/: app.rs  config.rs  lib.rs  lookup.rs  view.rs
webfinger-viewer/src/lookup/: policy.rs  request.rs  result.rs
webfinger-viewer/src/view/: meta.rs  summary.rs
webfinger-viewer/templates/: lookup_result.html
