[workspace]
resolver = "2"
members = ["webfinger-cli", "webfinger-rs"]

[workspace.package]
authors = ["Josh McKinney"]
edition = "2024"
description = "A WebFinger client and library written in Rust."
license = "MIT OR Apache-2.0"
version = "0.0.20"
rust-version = "1.86"
documentation = "https://docs.rs/webfinger-rs"
repository = "https://github.com/joshka/webfinger-rs"
keywords = ["webfinger", "client", "library", "rust", "cli"]
readme = "README.md"

[workspace.dependencies]
actix-tls = { version = "3.5", features = ["rustls-0_23"] }
actix-web = { version = "4.12", features = ["rustls-0_23"] }
async-convert = "1.0"
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12" }
axum-server = { version = "0.7" }
clap = "4.5"
clap-cargo = "0.18"
clap-verbosity-flag = { version = "3.0.4", default-features = false }
color-eyre = "0.6"
colored_json = "5.0"
document-features = "0.2"
http = "1.4"
http-body-util = "0.1"
nutype = { version = "0.6", features = ["serde"] }
percent-encoding = "2.3"
rcgen = "0.14"
reqwest = "0.12"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
thiserror = "2.0"
tokio = "1"
tower = "0.5"
tower-http = { version = "0.6" }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
webfinger-rs = { path = "webfinger-rs", version = "0.0.20" }
