[workspace]
resolver = "2"
members = ["webfinger-cli", "webfinger-rs"]

[workspace.package]
authors = ["Josh McKinney"]
edition = "2024"
description = "A WebFinger client and library written in Rust."
license = "MIT OR Apache-2.0"
version = "0.0.24"
rust-version = "1.88"
documentation = "https://docs.rs/webfinger-rs"
repository = "https://github.com/joshka/webfinger-rs"
keywords = ["webfinger", "client", "library", "rust", "cli"]
readme = "README.md"

[workspace.dependencies]
actix-tls = { version = "3.4", features = ["rustls-0_23"] }
actix-web = { version = "4.6", default-features = false, features = ["rustls-0_23"] }
async-convert = "1"
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12", default-features = false }
axum-server = { version = "0.8" }
clap = "4.5.48"
clap-cargo = "0.18"
clap-verbosity-flag = { version = "3.0.1", default-features = false }
color-eyre = "0.6"
colored_json = "5"
http = "1.1"
http-body-util = "0.1.2"
nutype = { version = "0.7", features = ["serde"] }
percent-encoding = "2.3"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = "0.23.40"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.45"
serde_with = "3"
thiserror = "2"
tokio = "1.52"
tower = "0.5.2"
tower-http = { version = "0.6.8" }
tracing = "0.1.37"
tracing-error = "0.2"
tracing-subscriber = "0.3"
webfinger-rs = { path = "webfinger-rs", version = "0.0.24" }
