[workspace]
resolver = "2"
members = ["webfinger-cli", "webfinger-rs", "webfinger-viewer-worker"]

[workspace.package]
authors = ["Josh McKinney"]
edition = "2024"
description = "A WebFinger client and library written in Rust."
license = "MIT OR Apache-2.0"
version = "0.0.31"
rust-version = "1.88"
documentation = "https://docs.rs/webfinger-rs"
repository = "https://github.com/joshka/webfinger-rs"
keywords = ["webfinger", "client", "library", "rust", "cli"]
readme = "README.md"

[workspace.dependencies]
actix-web = { version = "4.6", default-features = false, features = ["rustls-0_23"] }
async-convert = "1"
axum = { version = "0.8", default-features = false }
axum-server = { version = "0.8" }
clap = "4.5.48"
clap-cargo = "0.18"
clap-verbosity-flag = { version = "3.0.1", default-features = false }
color-eyre = "0.6"
colored_json = "5"
futures-util = "0.3"
http = { version = "1.3", default-features = false, features = ["std"] }
http-body-util = "0.1.2"
nutype = { version = "0.7", default-features = false, features = ["serde", "std"] }
percent-encoding = { version = "2.3.1", default-features = false }
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = "0.23.27"
serde = { version = "1.0.220", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde_with = { version = "3", default-features = false, features = ["macros", "std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1.41", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.7.0" }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"] }
url = "2.5"
web-sys = { version = "0.3.102", features = ["Response"] }
webfinger-rs = { path = "webfinger-rs", version = "0.0.31" }
worker = { version = "0.8.5", default-features = false }
