[package]
name = "webfinger-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
clap-cargo = "0.14.1"
clap-verbosity = "2.1.0"
color-eyre.workspace = true
colored_json = "5.0.0"
http.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webfinger-rs = { workspace = true, features = ["reqwest"] }

[[bin]]
name = "webfinger"
path = "src/main.rs"
