[package]
name = "webfinger-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
clap-cargo.workspace = true
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
color-eyre.workspace = true
colored_json.workspace = true
http.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webfinger-rs = { workspace = true, features = ["reqwest"] }

[[bin]]
name = "webfinger"
path = "src/main.rs"
