[package]
name = "webfinger-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
## No features are enabled by default.
default = []
## Provides integration with the Actix web framework.
actix = ["dep:actix-web"]
## Provides integration with the Axum web framework.
axum = ["dep:axum", "dep:axum-extra"]
## Provides integration with the Reqwest HTTP client.
reqwest = ["dep:reqwest"]

[dependencies]
actix-web = { workspace = true, optional = true }
async-convert.workspace = true
axum = { workspace = true, optional = true, features = ["json"] }
axum-extra = { workspace = true, optional = true, features = ["query"] }
document-features = { workspace = true, optional = true }
http.workspace = true
nutype = { workspace = true, features = ["serde"] }
percent-encoding.workspace = true
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
actix-tls.workspace = true
actix-web.workspace = true
axum = { workspace = true, default-features = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
color-eyre.workspace = true
http-body-util.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]


[[example]]
name = "axum"
required-features = ["axum"]
doc-scrape-examples = true

[[example]]
name = "actix"
required-features = ["actix"]

[[example]]
name = "client"
required-features = ["reqwest"]
