[package]
name = "webfinger-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebFinger request and response types for Rust, with first-party Reqwest, Axum, and Actix Web integrations."
license.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
## No features are enabled by default.
default = []
## Provides integration with the Actix web framework.
actix = ["dep:actix-web"]
## Provides integration with the Axum web framework.
axum = ["dep:axum", "dep:axum-extra"]
## Provides integration with the Reqwest HTTP client.
reqwest = ["dep:reqwest"]

[dependencies]
actix-web = { version = "4.6", optional = true }
async-convert = "1"
axum = { version = "0.8", optional = true, default-features = false, features = ["json"] }
axum-extra = { version = "0.12", optional = true, default-features = false, features = ["query"] }
http = "1.1"
nutype = { version = "0.6", features = ["serde"] }
percent-encoding = "2.3"
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "rustls-no-provider"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.45"
serde_with = "3"
thiserror = "2"
tracing = "0.1.37"

[dev-dependencies]
actix-tls.workspace = true
actix-web = { workspace = true, features = ["macros"] }
axum = { workspace = true, default-features = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
color-eyre.workspace = true
http-body-util.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]


[[example]]
name = "axum"
required-features = ["axum"]
doc-scrape-examples = true

[[example]]
name = "actix"
required-features = ["actix"]

[[example]]
name = "client"
required-features = ["reqwest"]
