[package]
name = "webfinger-service-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A native Axum server for WebFinger service configuration."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["webfinger", "service", "axum", "rust"]

[dependencies]
axum = { workspace = true, features = ["json", "http1", "tokio"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
webfinger-rs = { workspace = true, features = ["axum"] }
webfinger-service.workspace = true

[dev-dependencies]
http.workspace = true
serde_json.workspace = true
