[package]
name = "webfinger-service-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust Cloudflare Worker for serving WebFinger service responses from KV-backed configuration."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["webfinger", "cloudflare", "worker", "rust"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-web.workspace = true
webfinger-rs = { workspace = true, features = ["axum"] }
webfinger-service.workspace = true
worker = { workspace = true, features = ["http", "axum"] }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
