[package]
name = "webfinger-viewer-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A native Axum runtime for the WebFinger viewer."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["webfinger", "viewer", "debug", "axum"]

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
futures-util.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["stream"] }
rustls.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webfinger-viewer.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
