[package]
name = "webfinger-viewer-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust Cloudflare Worker for inspecting WebFinger discovery responses."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["webfinger", "cloudflare", "worker", "debug"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
askama = "0.16.0"
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
web-sys.workspace = true
webfinger-rs.workspace = true
worker = { workspace = true, features = ["http"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
