[package]
name = "webfinger-viewer-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust Cloudflare Worker for inspecting WebFinger discovery responses."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["webfinger", "cloudflare", "worker", "debug"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util.workspace = true
http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webfinger-viewer.workspace = true
worker = { workspace = true, features = ["http"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web.workspace = true
